--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -2,8 +2,12 @@ name: example
 
 on: [push]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
+
 jobs:
-  build:
+  base:
 
     runs-on: ubuntu-latest
     strategy:
