--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -20,13 +20,16 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+      
       # Install pip and pytest
-      -- name: Install packages
+      - name: Install packages
         run: |
+          python -m pip install --upgrade pip
+          python -m pip install pytest
           python -m pip install --upgrade pip wheel setuptools
+          python -m pip install -r requirements/default.txt
           python -m pip install -r requirements/test.txt
           python -m pip install .
           python -m pip list
-          python -m pip install pytest
       - name: Test with pytest
         run: pytest tests.py --doctest-modules networky
