--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Test NetworkY
         run: |
-          pytest --durations=10 --pyargs networky
+          pytest --durations=10
 
   default:
     runs-on: ${{ matrix.os }}-latest
@@ -53,13 +53,13 @@ jobs:
 
       - name: Test NetworkY
         run: |
-          pytest --doctest-modules --durations=10 --pyargs networky
+          pytest --doctest-modules --durations=10
 
       - name: Test Dispatching
         # Limit this to only a single combination from the matrix
         if: ${{ (matrix.os == 'ubuntu') && (matrix.python-version == '3.11') }}
         run: |
-          NETWORKY_GRAPH_CONVERT=nx-loopback pytest --doctest-modules --durations=10 --pyargs networky
+          NETWORKY_GRAPH_CONVERT=nx-loopback pytest --doctest-modules --durations=10
 
   extra:
     runs-on: ${{ matrix.os }}
@@ -119,7 +119,7 @@ jobs:
 
       - name: Test NetworkY
         run: |
-          pytest --doctest-modules --durations=10 --pyargs networky
+          pytest --doctest-modules --durations=10
 
   prerelease:
     runs-on: ${{ matrix.os }}-latest
@@ -144,4 +144,4 @@ jobs:
 
       - name: Test NetworkY
         run: |
-          pytest --doctest-modules --durations=10 --pyargs networky
+          pytest --doctest-modules --durations=10
