--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
           python -m pip install .
           python -m pip list
 
-      - name: Test NetworkY
+      - name: Test NetworkZ
         run: |
           pytest --durations=10
 
@@ -51,7 +51,7 @@ jobs:
           python -m pip install .
           python -m pip list
 
-      - name: Test NetworkY
+      - name: Test NetworkZ
         run: |
           pytest --doctest-modules --durations=10
 
@@ -59,7 +59,7 @@ jobs:
         # Limit this to only a single combination from the matrix
         if: ${{ (matrix.os == 'ubuntu') && (matrix.python-version == '3.11') }}
         run: |
-          NETWORKY_GRAPH_CONVERT=nx-loopback pytest --doctest-modules --durations=10
+          NetworkZ_GRAPH_CONVERT=nx-loopback pytest --doctest-modules --durations=10
 
   extra:
     runs-on: ${{ matrix.os }}
@@ -117,7 +117,7 @@ jobs:
           python -m pip install .
           python -m pip list
 
-      - name: Test NetworkY
+      - name: Test NetworkZ
         run: |
           pytest --doctest-modules --durations=10
 
@@ -142,6 +142,6 @@ jobs:
           pip install .
           pip list
 
-      - name: Test NetworkY
+      - name: Test NetworkZ
         run: |
           pytest --doctest-modules --durations=10
