--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include pyproject.toml
-include requirements.txt
+include requirements/*
 include LICENSE
 global-include *.md
 global-include VERSION
