--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Test NetworkZ
         run: |
-          pytest --durations=10
+          pytest --durations=10 --pyargs networkz
 
   default:
     runs-on: ${{ matrix.os }}-latest
@@ -128,7 +128,7 @@ jobs:
         os: [ubuntu, macos]
         python-version: ["3.9", "3.10", "3.11"]
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
