--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,13 +38,13 @@ default = [
     'networkx[default]',
 ]
 developer = [
-    'networkx[developer],
+    'networkx[developer]',
 ]
 extra = [
-    'networkx[extra],
+    'networkx[extra]',
 ]
 test = [
-    'networkx[test],
+    'networkx[test]',
 ]
 
 [tool.setuptools]
