--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,29 +7,29 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  base:
-    runs-on: ${{ matrix.os }}-latest
-    strategy:
-      matrix:
-        os: [ubuntu, macos, windows]
-        python-version: ["pypy-3.9"]
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
+  # base:
+  #  runs-on: ${{ matrix.os }}-latest
+  #  strategy:
+  #    matrix:
+  #      os: [ubuntu, macos, windows]
+  #      python-version: ["pypy-3.9"]
+  #  steps:
+  #    - uses: actions/checkout@v3
+  #    - name: Set up Python ${{ matrix.python-version }}
+  #      uses: actions/setup-python@v4
+  #      with:
+  #        python-version: ${{ matrix.python-version }}
 
-      - name: Install packages
-        run: |
-          python -m pip install --upgrade pip wheel setuptools
-          python -m pip install -r requirements/test.txt
-          python -m pip install .
-          python -m pip list
+  #    - name: Install packages
+  #      run: |
+  #        python -m pip install --upgrade pip wheel setuptools
+  #        python -m pip install -r requirements/test.txt
+  #        python -m pip install .
+  #        python -m pip list
 
-      - name: Test NetworkZ
-        run: |
-          pytest --durations=10 --pyargs networkz
+  #    - name: Test NetworkZ
+  #      run: |
+  #        pytest --durations=10 --pyargs networkz
 
   default:
     runs-on: ${{ matrix.os }}-latest
