--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ name = 'networkz'
 description = 'Extended Graph-Algorithms Library on Top of NetworkX'
 readme = 'README.MD'
 requires-python = '>=3.8'
+license = 'MIT'
 dynamic = ['version']
 keywords = [
     'Networks',
