--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ description = 'Extended Graph-Algorithms Library on Top of NetworkX'
 readme = 'README.MD'
 requires-python = '>=3.8'
 dynamic = ['version']
+license = {file = "LICENSE"}
 keywords = [
     'Networks',
     'Graph Theory',
