--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,3 +95,7 @@ select = [
 [tool.mypy]
 ignore_missing_imports = true
 exclude = 'subgraphviews|reportviews'
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = " --doctest-modules --durations=10 --ignore=experiments"
